k3s/whoami/whoami-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-loadbalancer
  namespace: whoami
spec:
  selector:
    app: traefiklabs
    task: whoami
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
