k3s/whoami/whoami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: whoami
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: whoami.192.168.0.128.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami 
            port:
              number: 80
